Watering timers in minutes

--- a/static/manual_watering.html
+++ b/static/manual_watering.html
@@ -97,21 +97,21 @@
 
     <label for="duration">Длительность полива</label>
     <select id="duration">
-        <option value="1">1 ??????</option>
-        <option value="2">2 ??????</option>
-        <option value="3">3 ??????</option>
-        <option value="4">4 ??????</option>
-        <option value="5">5 ?????</option>
-        <option value="6">6 ?????</option>
-        <option value="7">7 ?????</option>
-        <option value="8">8 ?????</option>
-        <option value="9">9 ?????</option>
-        <option value="10" selected>10 ?????</option>
-        <option value="11">11 ?????</option>
-        <option value="12">12 ?????</option>
-        <option value="13">13 ?????</option>
-        <option value="14">14 ?????</option>
-        <option value="15">15 ?????</option>
+        <option value="60">1 минута</option>
+        <option value="120" selected>2 минуты</option>
+        <option value="180">3 минуты</option>
+        <option value="240">4 минуты</option>
+        <option value="300">5 минут</option>
+        <option value="360">6 минут</option>
+        <option value="420">7 минут</option>
+        <option value="480">8 минут</option>
+        <option value="540">9 минут</option>
+        <option value="600">10 минут</option>
+        <option value="660">11 минут</option>
+        <option value="720">12 минут</option>
+        <option value="780">13 минут</option>
+        <option value="840">14 минут</option>
+        <option value="900">15 минут</option>
     </select>
 
     <div class="inline-group">
