--- a/static/index.html
+++ b/static/index.html
@@ -100,12 +100,6 @@
         .btn-ota:hover {
             background-color: #1976D2;
         }
-        .btn-delete {
-            background-color: #e74c3c;
-        }
-        .btn-delete:hover {
-            background-color: #c0392b;
-        }
         .status { 
             font-weight: bold; 
             margin: 10px 0;
@@ -167,7 +161,10 @@
     <div class="container">
         <div style="display: flex; justify-content: space-between; align-items: center; gap: 10px; flex-wrap: wrap;">
             <h1 style="margin: 0;">🌱 Система умного полива</h1>
-            <button id="logoutBtn" style="background-color: #e74c3c;">Выйти</button>
+            <div style="display:flex; gap:10px; flex-wrap: wrap; align-items:center;">
+                <button type="button" onclick="window.location.href='/static/profile.html'">Профиль</button>
+                <button id="logoutBtn" style="background-color: #e74c3c;">Выйти</button>
+            </div>
         </div>
         
         <div class="upload-section">
@@ -268,7 +265,7 @@
 
         async function loadDevices() {
             try {
-                const response = await authFetch('/api/devices');
+                const response = await authFetch('/api/devices/my');
                 const devices = await response.json();
                 const devicesDiv = document.getElementById('devices');
 
@@ -309,7 +306,7 @@
                     deviceDiv.innerHTML = `
                         <div class="device-header">
                             <h3>Watering Device ${titleLeft} <span class="fw-ver" title="Firmware version">${fwvEsc}</span></h3>
-                            <button class="btn-delete" onclick="deleteDevice('${device.device_id}')">Удалить</button>
+                            <button onclick="goToManualWatering('${device.device_id}')">Полив</button>
                         </div>
                         <div class="status">
                             <span class="status-badge">
@@ -393,21 +390,8 @@
             }
         }
 
-        async function deleteDevice(deviceId) {
-            if (!confirm('Удалить устройство?')) return;
-            try {
-                const response = await authFetch(`/api/device/${deviceId}`, { method: 'DELETE' });
-                if (response.ok) {
-                    alert('Устройство удалено');
-                    loadDevices();
-                    return;
-                }
-                const error = await response.json();
-                alert(error.detail || 'Ошибка при удалении устройства');
-            } catch (error) {
-                console.error('Error deleting device:', error);
-                alert('Ошибка при удалении устройства');
-            }
+        function goToManualWatering(deviceId) {
+            window.location.href = `/static/manual_watering.html?device_id=${encodeURIComponent(deviceId)}`;
         }
 
         async function updateSettings(deviceId) {
