--- a/static/admin_devices.html
+++ b/static/admin_devices.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
         <h1 style="margin:0;">Устройства</h1>
         <div class="actions">
             <a href="/" style="text-decoration:none;"><button type="button" class="secondary">Главная</button></a>
-            <a href="/static/admin_users.html" style="text-decoration:none;"><button type="button" class="secondary">Пользователи</button></a>
+            <a href="/admin_users.html" style="text-decoration:none;"><button type="button" class="secondary">Пользователи</button></a>
             <button id="logoutBtn" class="danger" type="button">Выйти</button>
         </div>
     </div>
@@ -43,8 +43,8 @@
 <script>
     const TOKEN_KEY = 'gh_access_token';
     const accessToken = localStorage.getItem(TOKEN_KEY);
-    if (!accessToken) { window.location.href = '/static/login.html'; }
-    const redirectToLogin = () => { localStorage.removeItem(TOKEN_KEY); window.location.href = '/static/login.html'; };
+    if (!accessToken) { window.location.href = '/login.html'; }
+    const redirectToLogin = () => { localStorage.removeItem(TOKEN_KEY); window.location.href = '/login.html'; };
     const authFetch = async (url, options = {}) => {
         const opts = { ...options };
         opts.headers = { ...(options.headers || {}), Authorization: `Bearer ${accessToken}` };
