--- a/static/admin_users.html
+++ b/static/admin_users.html
@@ -22,8 +22,10 @@
     <div class="actions" style="justify-content: space-between;">
         <h1 style="margin:0;">Пользователи</h1>
         <div class="actions">
-            <a href="/" style="text-decoration:none;"><button type="button">Главная</button></a>
+            <a href="/admin_users.html" style="text-decoration:none;"><button type="button">Пользователи</button></a>
             <a href="/admin_devices.html" style="text-decoration:none;"><button type="button">Устройства</button></a>
+            <a href="/admin_plants.html" style="text-decoration:none;"><button type="button">Растения</button></a>
+            <a href="/" style="text-decoration:none;"><button type="button">Главная</button></a>
             <button id="logoutBtn" class="danger" type="button">Выйти</button>
         </div>
     </div>
