--- a/static/admin_devices.html
+++ b/static/admin_devices.html
@@ -23,8 +23,10 @@
     <div class="actions" style="justify-content: space-between;">
         <h1 style="margin:0;">Устройства</h1>
         <div class="actions">
-            <a href="/" style="text-decoration:none;"><button type="button" class="secondary">Главная</button></a>
             <a href="/admin_users.html" style="text-decoration:none;"><button type="button" class="secondary">Пользователи</button></a>
+            <a href="/admin_devices.html" style="text-decoration:none;"><button type="button" class="secondary">Устройства</button></a>
+            <a href="/admin_plants.html" style="text-decoration:none;"><button type="button" class="secondary">Растения</button></a>
+            <a href="/" style="text-decoration:none;"><button type="button" class="secondary">Главная</button></a>
             <button id="logoutBtn" class="danger" type="button">Выйти</button>
         </div>
     </div>
