--- a/static/admin_plants.html
+++ b/static/admin_plants.html
@@ -3,53 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Админ: растения</title>
+    <title>Админка растений</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; background: #f5f5f5; }
-        table { width: 100%; border-collapse: collapse; background: #fff; }
+        body { font-family: Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 0; }
+        .container { max-width: 1200px; margin: 20px auto; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
+        h1 { margin-top: 0; }
+        table { width: 100%; border-collapse: collapse; margin-top: 10px; }
         th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
         th { background: #f0f0f0; }
+        button { padding: 8px; margin: 4px 0; border: 1px solid #ccc; border-radius: 6px; background: #27ae60; color: #fff; cursor: pointer; }
+        button.secondary { background: #3498db; }
+        button.danger { background: #c0392b; }
+        .actions { display: flex; gap: 8px; align-items: center; flex-wrap: wrap; }
+        .error { color: #c0392b; margin-top: 6px; }
     </style>
 </head>
 <body>
-    <h1>Админ: растения</h1>
-    <p><a href="admin_devices.html">К устройствам</a></p>
-    <table>
+<div class="container">
+    <div class="actions" style="justify-content: space-between;">
+        <h1 style="margin:0;">Растения</h1>
+        <div class="actions">
+            <a href="/admin_users.html" style="text-decoration:none;"><button type="button" class="secondary">Пользователи</button></a>
+            <a href="/admin_devices.html" style="text-decoration:none;"><button type="button" class="secondary">Устройства</button></a>
+            <a href="/admin_plants.html" style="text-decoration:none;"><button type="button" class="secondary">Растения</button></a>
+            <a href="/" style="text-decoration:none;"><button type="button" class="secondary">Главная</button></a>
+            <button id="logoutBtn" class="danger" type="button">Выйти</button>
+        </div>
+    </div>
+
+    <div id="errorBox" class="error"></div>
+
+    <table id="plantsTable">
         <thead>
             <tr><th>ID</th><th>Имя</th><th>Владелец</th><th>Группа</th></tr>
         </thead>
         <tbody id="plants-body"></tbody>
     </table>
+</div>
+<script>
+    const TOKEN_KEY = 'gh_access_token';
+    const accessToken = localStorage.getItem(TOKEN_KEY);
+    if (!accessToken) { window.location.href = '/login.html'; }
+    const redirectToLogin = () => { localStorage.removeItem(TOKEN_KEY); window.location.href = '/login.html'; };
+    const authFetch = async (url, options = {}) => {
+        const opts = { ...options };
+        opts.headers = { ...(options.headers || {}), Authorization: `Bearer ${accessToken}` };
+        const resp = await fetch(url, opts);
+        if (resp.status === 401 || resp.status === 403) redirectToLogin();
+        return resp;
+    };
 
-    <script>
-        const TOKEN_KEY = 'gh_access_token';
-        const token = localStorage.getItem(TOKEN_KEY);
-        if (!token) { window.location.href = '/login.html'; }
+    const errorBox = document.getElementById('errorBox');
+    const tbody = document.getElementById('plants-body');
+    document.getElementById('logoutBtn').addEventListener('click', redirectToLogin);
 
-        const authFetch = async (url, options = {}) => {
-            const opts = { ...options };
-            opts.headers = { ...(options.headers || {}), Authorization: `Bearer ${token}` };
-            const resp = await fetch(url, opts);
-            if (resp.status === 401 || resp.status === 403) {
-                localStorage.removeItem(TOKEN_KEY);
-                window.location.href = '/login.html';
-            }
-            return resp;
-        };
-
-        async function loadPlants() {
-            const resp = await authFetch('/api/admin/plants');
-            const plants = await resp.json();
-            const tbody = document.getElementById('plants-body');
-            tbody.innerHTML = '';
-            plants.forEach(p => {
-                const tr = document.createElement('tr');
-                tr.innerHTML = `<td>${p.id}</td><td>${p.name}</td><td>${p.owner_email || ''} (${p.owner_username || ''})</td><td>${p.group_name || ''}</td>`;
-                tbody.appendChild(tr);
-            });
+    async function ensureAdmin() {
+        const resp = await authFetch('/api/auth/me');
+        if (!resp.ok) return redirectToLogin();
+        const me = await resp.json();
+        if (me.role !== 'admin') {
+            errorBox.textContent = 'Доступ запрещен';
+            throw new Error('not admin');
         }
+    }
 
-        loadPlants();
-    </script>
+    function renderPlants(plants) {
+        tbody.innerHTML = '';
+        if (!plants.length) {
+            const emptyRow = document.createElement('tr');
+            emptyRow.innerHTML = '<td colspan="4">Нет данных</td>';
+            tbody.appendChild(emptyRow);
+            return;
+        }
+        plants.forEach((p) => {
+            const tr = document.createElement('tr');
+            const ownerText = p.owner_email ? `${p.owner_email} (id=${p.owner_id || ''})` : '';
+            tr.innerHTML = `<td>${p.id}</td><td>${p.name}</td><td>${ownerText}</td><td>${p.group_name || ''}</td>`;
+            tbody.appendChild(tr);
+        });
+    }
+
+    async function loadPlants() {
+        const resp = await authFetch('/api/admin/plants');
+        if (!resp.ok) { errorBox.textContent = 'Не удалось загрузить растения'; return; }
+        const plants = await resp.json();
+        renderPlants(plants);
+    }
+
+    async function init() {
+        await ensureAdmin();
+        await loadPlants();
+    }
+
+    init();
+</script>
 </body>
 </html>
