--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -265,13 +265,13 @@
         const accessToken = localStorage.getItem(TOKEN_KEY);
 
         if (!accessToken) {
-            window.location.href = '/login.html';
+            window.location.href = '/static/login.html';
             throw new Error('no token');
         }
 
         const redirectToLogin = () => {
             localStorage.removeItem(TOKEN_KEY);
-            window.location.href = '/login.html';
+            window.location.href = '/static/login.html';
         };
 
         const authFetch = async (url, options = {}) => {
