--- a/static/login.html
+++ b/static/login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -110,7 +110,7 @@
         const TOKEN_KEY = 'gh_access_token';
 
         const redirectHome = () => {
-            window.location.href = '/';
+            window.location.href = '/static/index.html';
         };
 
         const showError = (message) => {
